[package]
name = "rgclass"
version = "0.1.0"
edition = "2018"
authors = ["AlessandroBregoli <alessandroxciv@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.0"
ndarray-linalg = { version = "0.14", features = ["openblas-static"] }
